2008-04-22  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/xy/CategoryTableXYDataset.java: 
    Implemented PublicCloneable, plus
    (clone): New method override.

2008-04-21  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/ImageTitle.java
    (equals): New method override.

2008-04-18  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1943021 (Brian Cabana):
    * source/org/jfree/chart/plot/MultiplePiePlot.java
    (MultiplePiePlot(CategoryDataset)): Call setDataset() to ensure that
    plot registers as a dataset listener,
    * tests/org/jfree/chart/plot/junit/MultiplePiePlotTests.java
    (testConstructors): New test method.

2008-04-11  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/ImageTitle.java
    (arrange): New method override to handle margin, border and padding,
    * test/org/jfree/chart/title/junit/ImageTitleTests.java
    (testArrangeNN): New test method.

2008-04-11  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/urls/CustomXYURLGenerator.java
    (clone): Implemented,
    * tests/org/jfree/chart/urls/junit/CustomPieURLGeneratorTests.java: 
    New file,
    * tests/org/jfree/chart/urls/junit/CustomXYURLGeneratorTests.java
    (testEquals): New test method,
    (testCloning): Likewise,
    * tests/org/jfree/chart/urls/junit/UrlsPackageTests.java
    (suite): Added CustomPieURLGeneratorTests.

2008-04-11  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/DeviationRenderer.java
    (findRangeBounds): New method override,
    * source/org/jfree/chart/renderer/xy/YIntervalRenderer.java
    (findRangeBounds): Likewise.

2008-04-10  David Gilbert  <david.gilbert@object-refinery.com> 

    * source/org/jfree/data/xy/XIntervalSeriesCollection.java
    (getStartXValue): New method override,
    (getEndXValue): Likewise.
